# homework2

./: CMakeLists.txt  README.md  prepare_test.c  stress_test.c
.github/workflows/: hw2.yml
hw2_lib/: CMakeLists.txt  inout.c  inout.h  utils.c  utils.h
hw2_lib_shared/: CMakeLists.txt  inout.c  inout.h  threads.c  utils.c  utils.h
tests/: CMakeLists.txt  test_db.cpp
